fix: fixed wrong ex. path

--- a/Geoinformatique_I/IP/Exercices_IP/S1_IP_exercice.ipynb
+++ b/Geoinformatique_I/IP/Exercices_IP/S1_IP_exercice.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cristina-111/2024_Geoinformatique_I/blob/main/Geoinformatique_I/IP/Exercices_IP/S1_IP_exercice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cristina-111/2024_Geoinformatique_I/blob/main/s1_ip_exercice.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,10 +32,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": 1,
       "metadata": {
         "id": "6acDX_-_nLpC",
-        "outputId": "86f86cd4-018a-4bf4-9c34-3936fa1bf224",
+        "outputId": "0a99b51b-885b-44d2-f917-09e702d7e98f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 2,
       "metadata": {
         "id": "QBu-r7EFnLpF"
       },
@@ -73,9 +73,9 @@
       "source": [
         "# Initialiser des données\n",
         "\n",
-        "x = 10    # Remplacer par une valeur entière (integer)\n",
-        "y = 15    # Remplacer par une valeur décimale (float)\n",
-        "z = \"20\"  # Remplacer par une chaîne de caractères. Par exemple \"Python\""
+        "x = 3    # Remplacer par une valeur entière (integer)\n",
+        "y = 1.7    # Remplacer par une valeur décimale (float)\n",
+        "z = \"Python\"  # Remplacer par une chaîne de caractères. Par exemple \"Python\""
       ]
     },
     {
@@ -89,10 +89,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": 5,
       "metadata": {
         "id": "WDrvtjv2nLpG",
-        "outputId": "8c07aba8-5e1a-4235-ac25-71382c1a7839",
+        "outputId": "600cc51f-921d-440f-8997-89919d92bc40",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -103,7 +103,7 @@
           "name": "stdout",
           "text": [
             "<class 'int'>\n",
-            "<class 'int'>\n",
+            "<class 'float'>\n",
             "<class 'str'>\n"
           ]
         }
@@ -126,19 +126,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "iXXDA3-JnLpI"
       },
       "outputs": [],
       "source": [
-        "a = 12  # Remplacer par une valeur entière\n",
-        "b = 14  # Remplacer par une valeur entière"
+        "a = 15  # Remplacer par une valeur entière\n",
+        "b = 20  # Remplacer par une valeur entière"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 43,
+      "execution_count": null,
       "metadata": {
         "id": "Is2kTg-7nLpI"
       },
@@ -153,31 +153,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": 8,
       "metadata": {
         "id": "n7_BQYBanLpJ",
-        "outputId": "db850341-db91-4284-df03-417c83327eba",
+        "outputId": "8243db47-d70b-4414-d32d-82e418a31b29",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 105
+          "base_uri": "https://localhost:8080/"
         }
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-45-2908a0c8fc15>, line 2)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-45-2908a0c8fc15>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(\"Addition:\",+)\u001b[0m\n\u001b[0m                       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Addition: +\n",
+            "Soustraction: -\n",
+            "Multiplication: *\n",
+            "Division: /\n"
           ]
         }
       ],
       "source": [
         "# Afficher les résultats\n",
-        "print(\"Addition:\", +)\n",
-        "print(\"Soustraction:\", -)\n",
-        "print(\"Multiplication:\", *)\n",
-        "print(\"Division:\", /)\n"
+        "print(\"Addition:\", \"+\" )\n",
+        "print(\"Soustraction:\", \"-\" )\n",
+        "print(\"Multiplication:\", \"*\" )\n",
+        "print(\"Division:\", \"/\" )\n"
       ]
     },
     {
@@ -191,20 +192,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 48,
+      "execution_count": 18,
       "metadata": {
         "id": "o-v8FPXOnLpJ"
       },
       "outputs": [],
       "source": [
         "# Données\n",
-        "distance_km = 20  # Distance parcourue en kilomètres\n",
-        "consommation_essence_litres_km = 3  # Consommation d'essence en litres par km"
+        "distance_km = 200  # Distance parcourue en kilomètres\n",
+        "consommation_essence_litres_km = 10  # Consommation d'essence en litres par km"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 17,
       "metadata": {
         "id": "WvCqQV44nLpK"
       },
@@ -213,15 +214,15 @@
         "# Calcul des émissions de CO2 en kilogrammes\n",
         "# Le facteur 2,3 est une estimation générale de la quantité de dioxyde de carbone (CO2) émise en kilogrammes par litre de carburant brûlé.\n",
         "# Il est utilisé pour convertir la consommation d'essence en émissions de CO2.\n",
-        "emissions_CO2_kg = (20 * 3) * 2.3"
+        "emissions_CO2_kg = (200 * 10) * 2.3"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 46,
+      "execution_count": 19,
       "metadata": {
         "id": "bGnGt39ynLpK",
-        "outputId": "dcb7ff62-7be6-47b9-dc6b-3dde8f57d4e3",
+        "outputId": "d82e7f60-7e5f-42e0-ea7c-f129f0a33525",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -231,13 +232,13 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Les émissions de CO2 pour 20 km parcourus sont de 138 grammes.\n"
+            "Les émissions de CO2 pour 200 km parcourus sont de 46000 grammes.\n"
           ]
         }
       ],
       "source": [
         "# Afficher le résultat\n",
-        "print(\"Les émissions de CO2 pour\", 20, \"km parcourus sont de\", 138, \"grammes.\")"
+        "print(\"Les émissions de CO2 pour\", 200, \"km parcourus sont de\", 46000, \"grammes.\")"
       ]
     },
     {
@@ -251,37 +252,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": 22,
       "metadata": {
-        "id": "XtXC6cGUnLpK",
-        "outputId": "a58e1617-afcc-4af7-e8bd-ff2baf721aa0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 173
-        }
+        "id": "XtXC6cGUnLpK"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'W' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-50-b942f54aaa7c>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Données\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mpuissance_appareil\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mW\u001b[0m  \u001b[0;31m# Puissance de l'appareil en watts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mtemps_utilisation_heures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m24\u001b[0m  \u001b[0;31m# Temps d'utilisation en heures par jour\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'W' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Données\n",
-        "puissance_appareil = W  # Puissance de l'appareil en watts\n",
-        "temps_utilisation_heures = 24  # Temps d'utilisation en heures par jour"
+        "puissance_appareil = 2400  # Puissance de l'appareil en watts\n",
+        "temps_utilisation_heures = 12  # Temps d'utilisation en heures par jour"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 51,
+      "execution_count": 21,
       "metadata": {
         "id": "_V2F75BWnLpL"
       },
@@ -290,15 +274,15 @@
         "# Calcul de la consommation d'énergie quotidienne en kilowatt-heures (kWh)\n",
         "# La division par 1000 est nécessaire pour convertir la puissance de l'appareil (exprimée en watts) en kilowatts,\n",
         "# car 1 kilowatt équivaut à 1000 watts.\n",
-        "consommation_quotidienne_kWh = (20 * 2.3) / 1000"
+        "consommation_quotidienne_kWh = (2400 * 12) / 1000"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 20,
       "metadata": {
         "id": "gbXyVo-ZnLpL",
-        "outputId": "21c029ea-9622-4e86-e35c-84d3cd6f1283",
+        "outputId": "584cf536-ad62-4bb8-99b8-7aecd28c5379",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -308,14 +292,23 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "La consommation d'énergie quotidienne de l'appareil est de 0.046 kWh.\n"
+            "La consommation d'énergie quotidienne de l'appareil est de 28.8 kWh.\n"
           ]
         }
       ],
       "source": [
         "# Afficher le résultat\n",
-        "print(\"La consommation d'énergie quotidienne de l'appareil est de\", 0.046, \"kWh.\")"
+        "print(\"La consommation d'énergie quotidienne de l'appareil est de\", 28.8, \"kWh.\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pC4SSM0HAZSy"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
